@@ -3,6 +3,7 @@
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- docs: first line and file names glob match entire line
 - rescan macros: doesn't update action bar
 - quoick copy: Option-drag on OS X
 4.2 plugin guide:
